# Salary_parser__FastAPI

./: README.md  pyproject.toml
app/: main.py
app/database/: database.py  db_operations.py  tables.py
app/models/: vacancy.py
app/routers/: vacancies_router.py
app/scheduler/: scheduler_file.py
app/services/: hh_api.py
