[tool.poetry]
name = "salary-parser-fastapi"
version = "0.1.0"
description = ""
authors = ["Олег <oleg.ablov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.121.2"
httpx = "^0.28.1"
apscheduler = "^3.11.1"
pydantic = "^2.12.4"
sqlalchemy = "^2.0.44"
uvicorn = "^0.38.0"
databases = {extras = ["mysql"], version = "^0.9.0"}
aiomysql = "^0.3.2"
cryptography = "^46.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
